--- a/nextjs-first/nextjs-real-first/component/NavBar.module.css
+++ b/nextjs-first/nextjs-real-first/component/NavBar.module.css
@@ -1,7 +1,28 @@
-.link {
-    text-decoration: none;
+.navbar{
+    
+    background-color: black;
+    height: 65px;
+    width: 100%;
+    border-bottom: 1px solid rgb(64, 64, 64);
+    
 }
-  
-.active {
-    color: tomato;
+
+.navbar_text{
+    
+    position: absolute;
+    width: 57px;
+    height: 46px;
+    left: 19px;
+    top: 11px;
+    
+    font-family: 'Abel';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 46px;
+    /* identical to box height */
+    
+    
+    color: #fff;
 }
+
